--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,3 +57,20 @@ jobs:
           body: ${{ needs.release-up.outputs.release_notes }}
           files: |
             bin/*
+  deploy-website:
+    if: needs.release-up.outputs.released == 'true'
+    needs: release-up
+    runs-on: ubuntu-20.04
+    env:
+      VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+      VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install Vercel CLI
+        run: npm install --global vercel@latest
+      - name: Pull Vercel Environment Information
+        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Build Project Artifacts
+        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Deploy Project Artifacts to Vercel
+        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
