--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,11 @@ jobs:
           cp bin/darijascript-bin-${{ needs.release-up.outputs.tag }}-linux bin/darijascript-bin
           GOOS=windows GOARCH=amd64 go build -buildvcs=false -o bin/darijascript-bin-${{ needs.release-up.outputs.tag }}-windows.exe .
           GOOS=darwin GOARCH=amd64 go build -buildvcs=false -o bin/darijascript-bin-${{ needs.release-up.outputs.tag }}-macos .
-          GOOS=js GOARCH=wasm go build -buildvcs=false -o bin/darijascript-bin-${{ needs.release-up.outputs.tag }}-web.wasm .
+          GOOS=js GOARCH=wasm go build -buildvcs=false -o website/public/darijascript-bin-web.wasm .
+      - uses: actions/upload-artifact@v4
+        with:
+          name: wasm-build
+          path: website/public/darijascript-bin-web.wasm
       - name: Build vscode extension
         run: |
           npm install -g @vscode/vsce
@@ -70,6 +74,10 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
+      - uses: actions/download-artifact@v4
+        with:
+          name: wasm-build
+          path: website/public/darijascript-bin-web.wasm
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
       - name: Build Project Artifacts
