--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,7 +65,7 @@ jobs:
             bin/*
   deploy-website:
     if: needs.release-up.outputs.released == 'true'
-    needs: release-up
+    needs: [release-up, build-deploy]
     runs-on: ubuntu-20.04
     env:
       VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
@@ -77,7 +77,11 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: wasm-build
-          path: website/public/darijascript-bin-web.wasm
+          path: website/public/temp
+
+      - name: Copy wasm build to website/public
+        run: mv website/public/temp/darijascript-bin-web.wasm website/public/darijascript-bin-web.wasm
+
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
       - name: Build Project Artifacts
